# FastASR

./: CMakeLists.txt
lib/: EmbedLayer.cpp  EmbedLayer.h  LayerNorm.cpp  Model.cpp  Model.h  predefine_coe.h  simd_avx.cpp  simd_avx.h  util.cpp
scripts/: convert.py
